--- a/input.html
+++ b/input.html
@@ -1,23 +1,21 @@
 <html>
     <head>
-        <title>Input Data Barang</title>
+        <title> Input Data Barang Toko Sembako</title>
     </head>
     <body>
-        <h1>Toko Sembako Jaya</h1>
-        <h2>Form Input Data Barang</h2>
-        <form>
-            <input placeholder="Masukan No" type="number" /> <br /> <br />
-            <input placeholder="Masukan Kode Barang" type="number" /> <br /> <br />
-            <input placeholder="Masukan Nama Barang" type="name" /> <br /> <br />
-            <input placeholder="Masukan Jumlah Barang" type="number" /> <br /> <br />
-            <input placeholder="Masukan Jumlah Harga Satua Barang" type="number" /> <br /> <br />
-            <input placeholder="Masukan Harga Total Barang" type="number" /> <br /> <br />
-            <br />
-            <a href="index.html">
-                <button type="button" >Batal</button>
-            <a href="tampilkan.html">
-                <button type="button" >Tampilkan</button>
-            </a>
-        </form>
+        <img src="https://png.pngtree.com/png-vector/20221231/ourmid/pngtree-store-logo-icon-grocery-architecture-shopping-vector-png-image_43721612.jpg" width="100">
+        <h1> Input Stok Barang Toko Sembako</h1>
     </body>
+    <form>
+        <input placeholder="Masukan No" type="number" /> <br/> <br/>
+            <input placeholder="Masukan Kode Barang" type="number" /> <br/> <br/>
+            <input placeholder="Masukan Nama Barang" type="name" /> <br/> <br/>
+            <input placeholder="Masukan Jumlah Barang" type="number" /> <br/> <br/>
+            <input placeholder="Masukan Jumlah Harga Satua Barang" type="number" /> <br/> <br/>
+            <input placeholder="Masukan Harga Total Barang" type="number" /> <br/><br/>
+            <br />
+            <input placeholder="Masukan Gambar Barang" type="file" /> <br/><br/>
+            <a href="index.html"> <button type="button">Batal</button></a>
+            <a href="tampilkan.html"> <button type="button">Konfirmasi</button></a >
+    </form>
 </html>
