--- a/index.html
+++ b/index.html
@@ -1,30 +1,11 @@
 <html>
     <head>
-        <title>Tugas 1 Praktek Pemrograman</title>
+        <title> Toko Sembako </title>
     </head>
     <body>
-        <h1>Toko Sembako Jaya </h1>
-        <p>
-            Toko ini merupakan toko penjualan yang menjual barang-barang sembako dan kebutuhan lainnya 
-        </p>
-        <br />
-        <table border="1"> 
-            <thead>
-                <th>No.</th>
-                <th>Kode Barang</th>
-                <th>Nama Barang</th>
-                <th>Jumlah Barang</th>
-                <th>Harga Satuan Barang</th>
-                <th>Harga Total Barang</th>
-                </tr>
-            </thead>
-        </table>
-        <br />
-        <br />
-        <a href="input.html">
-            <button>Input Data</button>
-        </a>
-        <br />
-        <br />
+        <img src="https://png.pngtree.com/png-vector/20221231/ourmid/pngtree-store-logo-icon-grocery-architecture-shopping-vector-png-image_43721612.jpg" width="100">
+        <h1> Dashboard Toko Sembako </h1>
+        <a href="input.html"><button> Input Data </button></a>
+        <a href="product.html"><button> Daftar Barang </button></a>
     </body>
 </html>
