--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <img src="https://png.pngtree.com/png-vector/20221231/ourmid/pngtree-store-logo-icon-grocery-architecture-shopping-vector-png-image_43721612.jpg" width="100">
         <h1> Dashboard Toko Sembako </h1>
         <a href="input.html"><button> Input Data </button></a>
-        <a href="product.html"><button> Daftar Barang </button></a>
+        <a href="tampilkan.html"><button> Daftar Barang </button></a>
     </body>
 </html>
